--- a/assets/i18n/locales/pl-female.json
+++ b/assets/i18n/locales/pl-female.json
@@ -1,3 +1,9 @@
 {
-  "test": "Jestem fajna i testuje Pl"
+  "Hi, im gowi": "Cześć, jestem Gowi.",
+  "Hi Gowi": "Hej Gowi!",
+  "Nice to see you": "Miło Cię widzieć 😊",
+  "I can help you understand yourself": "Pomogę Ci na chwilę się zatrzymać i lepiejzrozumieć siebie.",
+  "This will only take a moment": "To zajmie tylko kilka minut.",
+
+  "Skip": "Pomiń"
 }
