--- a/assets/i18n/locales/pl-male.json
+++ b/assets/i18n/locales/pl-male.json
@@ -1,3 +1,9 @@
 {
-  "test": "Jestem fajny i testuje Pl"
+  "Hi, im gowi": "Cześć, jestem Gowi.",
+  "Hi Gowi": "Hej Gowi!",
+  "Nice to see you": "Miło Cię widzieć 😊 \n",
+  "I can help you understand yourself": "Pomogę Ci na chwilę się zatrzymać i lepiejzrozumieć siebie.\n",
+  "This will only take a moment": "To zajmie tylko kilka minut.",
+
+  "Skip": "Pomiń"
 }
