chore: replace emoji with unicode escape

--- a/assets/i18n/locales/pl-female.json
+++ b/assets/i18n/locales/pl-female.json
@@ -1,7 +1,7 @@
 {
   "Hi, im gowi": "Cześć, jestem Gowi.",
   "Hi Gowi": "Hej Gowi!",
-  "Nice to see you": "Miło Cię widzieć 😊",
+  "Nice to see you": "Miło Cię widzieć \uD83D\uDE0A",
   "I can help you understand yourself": "Pomogę Ci na chwilę się zatrzymać i lepiejzrozumieć siebie.",
   "This will only take a moment": "To zajmie tylko kilka minut.",
 
