--- a/assets/i18n/locales/pl-female.json
+++ b/assets/i18n/locales/pl-female.json
@@ -4,5 +4,81 @@
   "Nice to see you": "Miło Cię widzieć \uD83D\uDE0A",
   "I can help you understand yourself": "Pomogę Ci na chwilę się zatrzymać i lepiejzrozumieć siebie.",
   "This will only take a moment": "To zajmie tylko kilka minut.",
-  "Skip": "Pomiń"
+  "Skip": "Pomiń",
+
+  "Your daily space for self-discovery.": "Twoja codzienna przestrzeń do odkrywania siebie.",
+  "I help you strengthen your inner power, better understand yourself, and discover ways of living that truly suit you.": "Pomagam Ci wzmocnić Twoją wewnętrzną siłę, lepiej zrozumieć siebie oraz odkrywać sposoby życia, które naprawdę do Ciebie pasują.",
+  "Step by step, at your pace.": "Krok po kroku, w Twoim tempie.",
+  "Every moment you dedicate to yourself matters. Thanks to this, you get closer and closer to what you truly desire.": "Każdy moment, który poświęcasz sobie, ma znaczenie. Dzięki temu zbliżasz się coraz bardziej do tego, czego naprawdę pragniesz.",
+  "Sounds good": "Brzmi dobrze",
+  "Let's start": "Zaczynamy",
+
+  "Start your journey": "Zacznij swoją podróż",
+  "Create an account to monitor your development and match the path to yourself. It will take you less than a minute.": "Załóż konto, by obserwować swój rozwój i dopasować drogę do siebie. Zajmie Ci to mniej niż minutę.",
+  "Register": "Zarejestruj się",
+  "I already have an account": "Mam już konto",
+  "Or log in using:": "Lub zaloguj sie za pomocą:",
+
+  "Create your account": "Stwórz swoje konto",
+  "This will allow us to save your progress and tailor your development path to you.": "Dzięki temu zapiszemy Twoje postępy i dopasujemy ścieżkę rozwoju do Ciebie.",
+  "I accept the Terms and Conditions and Privacy Policy.": "Akceptuję Regulamin i Politykę prywatności.",
+  "Password": "Hasło",
+  "Repeat password": "Powtórz hasło",
+  "min. 8 characters": "min. 8 znaków",
+  "address@email.com": "adres@email.com",
+  "Create account": "Utwórz konto",
+  "Your name": "Twoje imię",
+  "My name is": "Moje imię to",
+  "My name": "Moje imię",
+  "Woman": "Kobieta",
+  "Man": "Mężczyzna",
+  "Other": "Inne",
+  "Enter a valid email address.": "Wpisz poprawny adres e-mail.",
+  "Password is too short.": "Hasło jest za krótkie.",
+  "Passwords do not match.": "Hasła nie są takie same.",
+  "You must accept the Terms and Conditions and Privacy Policy.": "Musisz zaakceptować Regulamin i Politykę Prywatności.",
+
+  "Welcome back!": "Witaj ponownie!",
+  "Log in to continue your journey with Gowi.": "Zaloguj się, żeby kontynuować swoją podróż z Gowi.",
+  "Don't have an account? Register.": "Nie masz konta? Zarejestruj się.",
+  "Forgot your password?": "Zapomniałaś/łeś hasła?",
+  "Log in.": "Zaloguj się.",
+  "Password is not correct.": "Hasło nie jest poprawne.",
+  "Forgotten password?": "Zapomniane hasło?",
+  "It happens to everyone! Provide your email address and we will send you a link to set a new password.": "Zdarza się każdemu! Podaj swój adres e-mail, a wyślemy Ci link do stawienia nowego hasła.",
+  "In case of problems, write to us: support@mygowi.app": "W razie problemów, napisz do nas: support@mygowi.app",
+  "Send reset link.": "Wyślij link resetujący.",
+  "We have sent you a link": "Wysłaliśmy Ci link",
+  "Check your email inbox. You will find a link there to set a new password. If you don't see the message, also check the Spam or Offers folder.": "Sprawdź swoją skrzynkę e-mail. Tam znajdziesz link do ustawienia nowego hasła. Jeśli nie widzisz wiadomości, zajrzyj też do folderu Spam lub Oferty.",
+  "Password already changed?": "Hasło już zmienione?",
+  "Return to login": "Wróć do logowania",
+  "Did not receive the message?": "Nie dostałeś wiadomości?",
+  "Resend link": "Ponownie wyślij link",
+  "You can request a new link in 5 minutes.": "Możesz poprosić o nowy link za 5 minut.",
+
+  "Great that you are here!": "Super, że jesteś!",
+  "Now I will ask you a few short questions to get to know you better.": "Teraz zadam Ci kilka krótkich pytań, żeby lepiej Cię poznać.",
+  "Amount": "Ilość",
+  "Time": "Czas",
+  "Questions": "Pytań",
+  "Minutes": "Minut",
+  "OK, let's begin": "OK, zaczynamy",
+
+  "BODY AND ENERGY": "CIAŁO I ENERGIA",
+  "My physical health allows me to do what I want every day.": "Moje zdrowie fizyczne pozwala mi robić to, co chcę na co dzień.",
+  "I feel calm and in mental balance.": "Czuję się spokojna i jestem w równowadze psychicznej.",
+  "I feel that my life has meaning and direction.": "Mam poczucie, że moje życie ma sens i kierunek.",
+  "Overall, I am satisfied with my life.": "Ogólnie jestem zadowolona ze swojego życia.",
+  "I have pleasant and supportive social contacts.": "Mam miłe i wspierające kontakty towarzyskie.",
+  "I am able to cope with daily duties and challenges.": "Potrafię radzić sobie z codziennymi obowiązkami i wyzwaniami.",
+  "I return to balance after difficult situations.": "Wracam do równowagi po trudnych sytuacjach.",
+  "I feel that I have good contact with myself.": "Czuję, że mam ze sobą dobry kontakt.",
+
+  "To what extent does this apply to you? (0-5)": "W jakim stopniu dotyczy to Ciebie? (0-5)",
+  "0 – Not at all": "0 – W ogóle",
+  "1 – Rather not": "1 – Raczej nie",
+  "2 – Probably": "2 – Prawdopodobnie",
+  "3 – A little": "3 – Trochę",
+  "4 – Rather yes": "4 – Raczej tak",
+  "5 – Definitely yes": "5 – Zdecydowanie tak"
 }
