--- a/assets/i18n/locales/pl-female.json
+++ b/assets/i18n/locales/pl-female.json
@@ -80,5 +80,40 @@
   "2 – Probably": "2 – Prawdopodobnie",
   "3 – A little": "3 – Trochę",
   "4 – Rather yes": "4 – Raczej tak",
-  "5 – Definitely yes": "5 – Zdecydowanie tak"
+  "5 – Definitely yes": "5 – Zdecydowanie tak",
+
+  "Your wellbeing profile.": "Twój obraz dobrostanu.",
+  "Here is what your current state looks like in various areas of life – GROWWEB.": "Oto, jak wygląda Twój obecny stan w różnych obszarach życia – GROWWEB.",
+  "We have recorded this result for today – you will return to it after a few weeks to see what has changed.": "Ten wynik zapisaliśmy na dziś – wrócisz do niego po kilku tygodniach, by zobaczyć, co się zmieniło.",
+
+  "FEELINGS AND THOUGHTS": "UCZUCIA I MYŚLI",
+  "MEANING AND DEVELOPMENT": "SENS I ROZWÓJ",
+  "QUALITY OF LIFE AND SAFETY": "JAKOŚĆ ŻYCIA I BEZPIECZEŃSTWO",
+  "RELATIONSHIPS AND PARTICIPATION": "RELACJE I UCZESTNICTWO",
+  "ACTION AND AUTONOMY": "DZIAŁANIE I AUTONOMIA",
+  "RESILIENCE AND SELF-TRUST": "ODPORNOŚĆ I ZAUFANIE DO SIEBIE",
+  "CONTACT WITH SELF AND COMMUNICATION": "KONTAKST ZE SOBĄ I KOMUNIKACJA",
+
+  "This is the last step": "To już ostatni krok",
+  "Choose the areas you want to discover first. Take into account your GROWWEB results - they may suggest where it is worth starting.": "Wybierz obszary, które chcesz odkrywać w pierwszej kolejności. Weź pod uwagę swoje wyniki z GROWWEB - mogą podpowiedzieć Ci, od czego warto zacząć.",
+  "All other topics will be waiting for you. You don't lose anything. :)": "Wszystkie pozostałe tematy będą na Ciebie czekać. Niczego nie tracisz. :)",
+  "Self-discovery": "Odkrywanie siebie",
+  "Relationships and bonds": "Relacje i więzi",
+  "Positive thinking and its impact": "Pozytywne myślenie i jego wpływ",
+  "My values and standards": "Moje wartości i standardy",
+  "Meaning of life": "Sens życia",
+  "How do I perceive myself?": "Jak postrzegam siebie?",
+  "Emotional awareness": "Świadomość emocjonalna",
+  "My beliefs": "Moje przekonania",
+  "My resources": "Moje zasoby",
+  "Random": "Losowo",
+
+  "The path is ready!": "Ścieżka jest gotowa!",
+  "We will start with the topics you have chosen. MyGowi will guide you step by step.": "Zaczniemy od tematów, które wybrałaś/eś. MyGowi poprowadzi Cię krok po kroku.",
+  "I am starting my journey": "Zaczynam swoją podróż",
+  "Before we start...": "Zanim zaczniemy...",
+  "Your path has already begun. If you want to go further, Gowi will be your daily companion. Unlock access to the full practice rhythm.": "Twoja ścieżka już się zaczęła. Jeśli chcesz iść dalej, Gowi będzie Twoim codziennym towarzyszem. Otwórz dostęp do pełnego rytmu praktyki.",
+  "Plan": "Plan",
+  "I choose the package": "Wybieram pakiet",
+  "Start a free week": "Zacznij darmowy tydzień"
 }
