--- a/assets/i18n/locales/pl-male.json
+++ b/assets/i18n/locales/pl-male.json
@@ -109,7 +109,7 @@
   "Random": "Losowo",
 
   "The path is ready!": "Ścieżka jest gotowa!",
-  "We will start with the topics you have chosen. MyGowi will guide you step by step.": "Zaczniemy od tematów, które wybrałaś/eś. MyGowi poprowadzi Cię krok po kroku.",
+  "We will start with the topics you have chosen. MyGowi will guide you step by step.": "Zaczniemy od tematów, które wybrałeś. MyGowi poprowadzi Cię krok po kroku.",
   "I am starting my journey": "Zaczynam swoją podróż",
   "Before we start...": "Zanim zaczniemy...",
   "Your path has already begun. If you want to go further, Gowi will be your daily companion. Unlock access to the full practice rhythm.": "Twoja ścieżka już się zaczęła. Jeśli chcesz iść dalej, Gowi będzie Twoim codziennym towarzyszem. Otwórz dostęp do pełnego rytmu praktyki.",
