--- a/assets/i18n/locales/nl.json
+++ b/assets/i18n/locales/nl.json
@@ -1,122 +1,128 @@
 {
-  "Hi, im gowi": "Hoi, ik ben Gowi.",
-  "Hi Gowi": "Hoi, Gowi!",
-  "Nice to see you": "Leuk je te zien \uD83D\uDE0A",
-  "I can help you understand yourself": "Ik help je even stil te staan en jezelf beter te begrijpen.",
-  "This will only take a moment": "Het duurt maar een paar minuten.",
-  "Skip": "Overslaan",
-
-  "Your daily space for self-discovery.": "Jouw dagelijkse ruimte voor zelfinzicht.",
-  "I help you strengthen your inner power, better understand yourself, and discover ways of living that truly suit you.": "Ik help je je innerlijke kracht te versterken, jezelf beter te begrijpen en een manier van leven te ontdekken die écht bij jou past.",
-  "Step by step, at your pace.": "Stap voor stap, op uw tempo.",
-  "Every moment you dedicate to yourself matters. Thanks to this, you get closer and closer to what you truly desire.": "Stap voor stap, op jouw tempo. Elke moment voor jezelf telt. Zo kom je steeds dichter bij wat je echt wilt.",
-  "Sounds good": "Klinkt goed",
-  "Let's start": "Laten we beginnen!",
-
-  "Start your journey": "Begin je reis",
-  "Create an account to monitor your development and match the path to yourself. It will take you less than a minute.": "Ik nodig je uit om een account aan te maken zodat je je ontwikkeling bewust kunt volgen en je traject kunt afstemmen op jouw wensen.",
-  "Register": "Registreer je",
-  "I already have an account": "Ik heb al een account",
-  "Or log in using:": "Of log in met:",
-
-  "Create your account": "Maak je account aan",
-  "This will allow us to save your progress and tailor your development path to you.": "Zo kunnen we je voortgang bijhouden en je ontwikkelpad op jou afstemmen.",
-  "I accept the Terms and Conditions and Privacy Policy.": "Ik accepteer de Algemene Voorwaarden en het Privacybeleid.",
-  "Password": "Wachtwoord",
-  "Repeat password": "Herhaal wachtwoord:",
-  "min. 8 characters": "min. 8 tekens",
-  "address@email.com": "adres@email.com",
-  "Create account": "Maak account aan",
-  "Your name": "Jouw naam",
-  "My name is": "Mijn naam is",
-  "My name": "Mijn naam...",
-  "Woman": "Vrouw",
-  "Man": "Man",
-  "Other": "Zeg ik liever niet",
-  "Enter a valid email address.": "Voer een geldig e-mailadres in.",
-  "Password is too short.": "Het wachtwoord is te kort.",
-  "Passwords do not match.": "De wachtwoorden komen niet overeen.",
-  "You must accept the Terms and Conditions and Privacy Policy.": "Je moet de Algemene Voorwaarden en het Privacybeleid accepteren.",
-
-  "Welcome back!": "Welkom terug!",
-  "Log in to continue your journey with Gowi.": "Log in om je reis met Gowi voort te zetten.",
-  "Don't have an account? Register.": "Heb je nog geen account? Registreer je.",
-  "Forgot your password?": "Wachtwoord vergeten?",
-  "Log in.": "Log in",
-  "Password is not correct.": "Het wachtwoord klopt niet.",
-  "Forgotten password?": "Wachtwoord vergeten?",
-  "It happens to everyone! Provide your email address and we will send you a link to set a new password.": "Dat kan iedereen overkomen! Vul je e-mailadres in, dan sturen we je een link om een nieuw wachtwoord in te stellen.",
-  "In case of problems, write to us: support@mygowi.app": "Heb je problemen? Contacteer ons via: support@mygowi.app",
-  "Send reset link.": "Stuur resetlink",
-  "We have sent you a link": "We hebben je een link gestuurd",
-  "Check your email inbox. You will find a link there to set a new password. If you don't see the message, also check the Spam or Offers folder.": "Controleer je e-mailinbox. Daar vind je een link om een nieuw wachtwoord in te stellen. Als je het bericht niet ziet, kijk dan ook in je map Spam of Promoties.",
-  "Password already changed?": "Wachtwoord al gewijzigd?",
-  "Return to login": "Ga terug naar inloggen",
-  "Did not receive the message?": "Geen bericht ontvangen?",
-  "Resend link": "Stuur de link opnieuw",
-  "You can request a new link in 5 minutes.": "Je kunt over 5 minuten opnieuw om een link vragen.",
-
-  "Great that you are here!": "Super dat je er bent!",
-  "Now I will ask you a few short questions to get to know you better.": "Nu stel ik je een paar korte vragen om je beter te leren kennen.",
-  "Amount": "Aantal",
-  "Time": "Tijd",
-  "Questions": "VRAGEN",
-  "Minutes": "MINUTEN",
-  "OK, let's begin": "OK, laten we beginnen!",
-
-  "BODY AND ENERGY": "LICHAAM EN ENERGIE",
-  "My physical health allows me to do what I want every day.": "Mijn fysieke gezondheid stelt me in staat om dagelijks te doen wat ik wil.",
-  "I feel calm and in mental balance.": "Ik voel me kalm en in innerlijke balans.",
-
-  "I feel that my life has meaning and direction.": "Ik heb het gevoel dat mijn leven zin en richting heeft.",
-  "Overall, I am satisfied with my life.": "Over het algemeen ben ik tevreden met mijn leven.",
-
-  "I have pleasant and supportive social contacts.": "Ik heb hechte en ondersteunende relaties met anderen.",
-  "I am able to cope with daily duties and challenges.": "Ik kan omgaan met dagelijkse taken en uitdagingen.",
-
-  "I return to balance after difficult situations.": "Ik kan herstellen na moeilijke situaties.",
-  "I feel that I have good contact with myself.": "Ik voel dat ik goed contact met mezelf heb.",
-
-  "To what extent does this apply to you? (0-5)": "In welke mate geldt dit voor jou? (0-5)",
-  "0 – Not at all": "0 → helemaal mee oneens",
-  "1 – Rather not": "1 → mee oneens",
-  "2 – Probably": "2 → een beetje mee oneens",
-  "3 – A little": "3 → een beetje mee eens",
-  "4 – Rather yes": "4 → mee eens",
-  "5 – Definitely yes": "5 → helemaal mee eens",
-
-  "Your wellbeing profile.": "Jouw welzijnsbeeld",
-  "Here is what your current state looks like in various areas of life – GROWWEB.": "Zo ziet jouw huidige situatie eruit in verschillende levensgebieden – GROWWEB.",
-  "We have recorded this result for today – you will return to it after a few weeks to see what has changed.": " We hebben dit resultaat vandaag opgeslagen – Kom later terug om de test opnieuw te maken en te zien welke stappen je hebt gezet.",
-
-  "FEELINGS AND THOUGHTS": "GEVOELENS EN GEDACHTEN",
-  "MEANING AND DEVELOPMENT": "ZINGEVING",
-  "QUALITY OF LIFE AND SAFETY": "LEVENSSKWALITEIT EN VEILIGHEID",
-  "RELATIONSHIPS AND PARTICIPATION": "RELATIES EN VERBONDENHEID",
-  "ACTION AND AUTONOMY": "ZELFSTANDIGHEID EN VERANTWOORDELIJKHEID",
-  "RESILIENCE AND SELF-TRUST": "MENTALE VEERKRACHT",
-  "CONTACT WITH SELF AND COMMUNICATION": "CONTACT MET JEZELF EN ANDEREN",
-
-  "This is the last step": "Dit is de laatste stap",
-  "Choose the areas you want to discover first. Take into account your GROWWEB results - they may suggest where it is worth starting.": "Kies de gebieden die je als eerste wilt verkennen. Houd je GROWWEB-resultaten in gedachten – die kunnen je helpen bepalen waar je het best kunt beginnen.",
-  "All other topics will be waiting for you. You don't lose anything. :)": "Alle andere thema’s blijven voor je beschikbaar. Je verliest niets. :)",
-  "Self-discovery": "Zelfontdekking",
-  "Relationships and bonds": "Relaties en verbindingen",
-  "Positive thinking and its impact": "Positief denken",
-  "My values and standards": "Mijn waarden en standaarden",
-  "Meaning of life": "Zingveving",
-  "How do I perceive myself?": "Hoe zie ik mezelf?",
-  "Emotional awareness": "Emotioneel bewustzijn",
-  "My beliefs": "Mijn overtuigingen",
-  "My resources": "Mijn hulpbronnen",
-  "Random": "Willekeurig",
-
-  "The path is ready!": "Je pad is klaar!",
-  "We will start with the topics you have chosen. MyGowi will guide you step by step.": "We beginnen met de thema’s die jij hebt gekozen. Gowi begeleidt je stap voor stap.",
-  "I am starting my journey": "Ik begin mijn reis",
-  "Before we start...": "Voordat we beginnen…",
-  "Your path has already begun. If you want to go further, Gowi will be your daily companion. Unlock access to the full practice rhythm.": "Je traject is gestart. Wil je verder bouwen aan je ontwikkeling? Gowi begeleidt je stap voor stap. Activeer je dagelijkse ritme en ga verder.",
-  "Plan": "Plan",
-  "I choose the package": "Ik kies dit pakket",
-  "Start a free week": "Start je gratis week"
+  "buttons": {
+    "Skip": "Overslaan",
+    "Hi Gowi": "Hoi, Gowi!",
+    "Sounds good": "Klinkt goed",
+    "Let's start": "Laten we beginnen!",
+    "Register": "Registreer je",
+    "I already have an account": "Ik heb al een account",
+    "Or log in using:": "Of log in met:",
+    "I accept the Terms and Conditions and Privacy Policy.": "Ik accepteer de Algemene Voorwaarden en het Privacybeleid.",
+    "Woman": "Vrouw",
+    "Man": "Man",
+    "Other": "Zeg ik liever niet",
+    "Don't have an account? Register.": "Heb je nog geen account? Registreer je.",
+    "Forgot your password?": "Wachtwoord vergeten?",
+    "Log in.": "Log in",
+    "Password is not correct.": "Het wachtwoord klopt niet.",
+    "Send reset link.": "Stuur resetlink",
+    "Did not receive the message?": "Geen bericht ontvangen?",
+    "Resend link": "Stuur de link opnieuw",
+    "OK, let's begin": "OK, laten we beginnen!",
+    "0 – Not at all": "0 → helemaal mee oneens",
+    "1 – Rather not": "1 → mee oneens",
+    "2 – Probably": "2 → een beetje mee oneens",
+    "3 – A little": "3 → een beetje mee eens",
+    "4 – Rather yes": "4 → mee eens",
+    "5 – Definitely yes": "5 → helemaal mee eens",
+    "Self-discovery": "Zelfontdekking",
+    "Relationships and bonds": "Relaties en verbindingen",
+    "Positive thinking and its impact": "Positief denken",
+    "My values and standards": "Mijn waarden en standaarden",
+    "Meaning of life": "Zingveving",
+    "How do I perceive myself?": "Hoe zie ik mezelf?",
+    "Emotional awareness": "Emotioneel bewustzijn",
+    "My beliefs": "Mijn overtuigingen",
+    "My resources": "Mijn hulpbronnen",
+    "Random": "Willekeurig",
+    "I am starting my journey": "Ik begin mijn reis",
+    "I choose the package": "Ik kies dit pakket",
+    "Start a free week": "Start je gratis week"
+  },
+  "formsInfo": {
+    "Password": "Wachtwoord",
+    "Repeat password": "Herhaal wachtwoord:",
+    "min. 8 characters": "min. 8 tekens",
+    "address@email.com": "adres@email.com",
+    "Create account": "Maak account aan",
+    "Your name": "Jouw naam",
+    "My name is": "Mijn naam is",
+    "My name": "Mijn naam..."
+  },
+  "introductionTexts": {
+    "Hi, im gowi": "Hoi, ik ben Gowi.",
+    "Nice to see you": "Leuk je te zien \uD83D\uDE0A",
+    "I can help you understand yourself": "Ik help je even stil te staan en jezelf beter te begrijpen.",
+    "This will only take a moment": "Het duurt maar een paar minuten.",
+    "Your daily space for self-discovery.": "Jouw dagelijkse ruimte voor zelfinzicht.",
+    "I help you strengthen your inner power, better understand yourself, and discover ways of living that truly suit you.": "Ik help je je innerlijke kracht te versterken, jezelf beter te begrijpen en een manier van leven te ontdekken die écht bij jou past.",
+    "Step by step, at your pace.": "Stap voor stap, op uw tempo.",
+    "Every moment you dedicate to yourself matters. Thanks to this, you get closer and closer to what you truly desire.": "Stap voor stap, op jouw tempo. Elke moment voor jezelf telt. Zo kom je steeds dichter bij wat je echt wilt.",
+    "Start your journey": "Begin je reis",
+    "Create an account to monitor your development and match the path to yourself. It will take you less than a minute.": "Ik nodig je uit om een account aan te maken zodat je je ontwikkeling bewust kunt volgen en je traject kunt afstemmen op jouw wensen.",
+    "This is the last step": "Dit is de laatste stap",
+    "Choose the areas you want to discover first. Take into account your GROWWEB results - they may suggest where it is worth starting.": "Kies de gebieden die je als eerste wilt verkennen. Houd je GROWWEB-resultaten in gedachten – die kunnen je helpen bepalen waar je het best kunt beginnen.",
+    "All other topics will be waiting for you. You don't lose anything. :)": "Alle andere thema’s blijven voor je beschikbaar. Je verliest niets. :)",
+    "The path is ready!": "Je pad is klaar!",
+    "We will start with the topics you have chosen. MyGowi will guide you step by step.": "We beginnen met de thema’s die jij hebt gekozen. Gowi begeleidt je stap voor stap."
+  },
+  "loginTexts": {
+    "Welcome back!": "Welkom terug!",
+    "Log in to continue your journey with Gowi.": "Log in om je reis met Gowi voort te zetten."
+  },
+  "createAccTexts": {
+    "Create your account": "Maak je account aan",
+    "This will allow us to save your progress and tailor your development path to you.": "Zo kunnen we je voortgang bijhouden en je ontwikkelpad op jou afstemmen."
+  },
+  "restorePasswordTexts": {
+    "Forgotten password?": "Wachtwoord vergeten?",
+    "It happens to everyone! Provide your email address and we will send you a link to set a new password.": "Dat kan iedereen overkomen! Vul je e-mailadres in, dan sturen we je een link om een nieuw wachtwoord in te stellen.",
+    "In case of problems, write to us: support@mygowi.app": "Heb je problemen? Contacteer ons via: support@mygowi.app",
+    "We have sent you a link": "We hebben je een link gestuurd",
+    "Check your email inbox. You will find a link there to set a new password. If you don't see the message, also check the Spam or Offers folder.": "Controleer je e-mailinbox. Daar vind je een link om een nieuw wachtwoord in te stellen. Als je het bericht niet ziet, kijk dan ook in je map Spam of Promoties.",
+    "Password already changed?": "Wachtwoord al gewijzigd?",
+    "Return to login": "Ga terug naar inloggen"
+  },
+  "errorMessages": {
+    "Enter a valid email address.": "Voer een geldig e-mailadres in.",
+    "Password is too short.": "Het wachtwoord is te kort.",
+    "Passwords do not match.": "De wachtwoorden komen niet overeen.",
+    "You must accept the Terms and Conditions and Privacy Policy.": "Je moet de Algemene Voorwaarden en het Privacybeleid accepteren.",
+    "You can request a new link in 5 minutes.": "Je kunt over 5 minuten opnieuw om een link vragen."
+  },
+  "quizTexts": {
+    "Great that you are here!": "Super dat je er bent!",
+    "Now I will ask you a few short questions to get to know you better.": "Nu stel ik je een paar korte vragen om je beter te leren kennen.",
+    "Amount": "Aantal",
+    "Time": "Tijd",
+    "Questions": "VRAGEN",
+    "Minutes": "MINUTEN",
+    "My physical health allows me to do what I want every day.": "Mijn fysieke gezondheid stelt me in staat om dagelijks te doen wat ik wil.",
+    "I feel calm and in mental balance.": "Ik voel me kalm en in innerlijke balans.",
+    "I feel that my life has meaning and direction.": "Ik heb het gevoel dat mijn leven zin en richting heeft.",
+    "Overall, I am satisfied with my life.": "Over het algemeen ben ik tevreden met mijn leven.",
+    "I have pleasant and supportive social contacts.": "Ik heb hechte en ondersteunende relaties met anderen.",
+    "I am able to cope with daily duties and challenges.": "Ik kan omgaan met dagelijkse taken en uitdagingen.",
+    "I return to balance after difficult situations.": "Ik kan herstellen na moeilijke situaties.",
+    "I feel that I have good contact with myself.": "Ik voel dat ik goed contact met mezelf heb.",
+    "To what extent does this apply to you? (0-5)": "In welke mate geldt dit voor jou? (0-5)"
+  },
+  "wellbeingProfile": {
+    "BODY AND ENERGY": "LICHAAM EN ENERGIE",
+    "FEELINGS AND THOUGHTS": "GEVOELENS EN GEDACHTEN",
+    "MEANING AND DEVELOPMENT": "ZINGEVING",
+    "QUALITY OF LIFE AND SAFETY": "LEVENSSKWALITEIT EN VEILIGHEID",
+    "RELATIONSHIPS AND PARTICIPATION": "RELATIES EN VERBONDENHEID",
+    "ACTION AND AUTONOMY": "ZELFSTANDIGHEID EN VERANTWOORDELIJKHEID",
+    "RESILIENCE AND SELF-TRUST": "MENTALE VEERKRACHT",
+    "CONTACT WITH SELF AND COMMUNICATION": "CONTACT MET JEZELF EN ANDEREN",
+    "Your wellbeing profile.": "Jouw welzijnsbeeld",
+    "Here is what your current state looks like in various areas of life – GROWWEB.": "Zo ziet jouw huidige situatie eruit in verschillende levensgebieden – GROWWEB.",
+    "We have recorded this result for today – you will return to it after a few weeks to see what has changed.": " We hebben dit resultaat vandaag opgeslagen – Kom later terug om de test opnieuw te maken en te zien welke stappen je hebt gezet."
+  },
+  "offert": {
+    "Before we start...": "Voordat we beginnen…",
+    "Your path has already begun. If you want to go further, Gowi will be your daily companion. Unlock access to the full practice rhythm.": "Je traject is gestart. Wil je verder bouwen aan je ontwikkeling? Gowi begeleidt je stap voor stap. Activeer je dagelijkse ritme en ga verder.",
+    "Plan": "Plan"
+  }
 }
