--- a/assets/i18n/locales/en.json
+++ b/assets/i18n/locales/en.json
@@ -51,9 +51,7 @@
   },
   "introductionTexts": {
     "Hi, im gowi": "Hi, im gowi",
-    "Nice to see you": "Nice to see you",
-    "I can help you understand yourself": "I can help you understand yourself",
-    "This will only take a moment": "This will only take a moment",
+    "Nice to see you! I can help you understand yourself This will only take a moment": "Nice to see you! I can help you understand yourself This will only take a moment.",
     "Your daily space for self-discovery.": "Your daily space for self-discovery.",
     "I help you strengthen your inner power, better understand yourself, and discover ways of living that truly suit you.": "I help you strengthen your inner power, better understand yourself, and discover ways of living that truly suit you.",
     "Step by step, at your pace.": "Step by step, at your pace.",
