--- a/assets/i18n/locales/pl-female.json
+++ b/assets/i18n/locales/pl-female.json
@@ -55,15 +55,13 @@
   },
   "introductionTexts": {
     "Hi, im gowi": "Cześć, jestem Gowi.",
-    "Nice to see you": "Miło Cię widzieć \uD83D\uDE0A",
-    "I can help you understand yourself": "Pomogę Ci na chwilę się zatrzymać i lepiej zrozumieć siebie.",
-    "This will only take a moment": "To zajmie tylko kilka minut.",
+    "Nice to see you! I can help you understand yourself This will only take a moment": "Miło Cię widzieć \uD83D\uDE0A \nPomogę Ci na chwilę się zatrzymać \ni lepiej zrozumieć siebie. \nTo zajmie tylko kilka minut.",
 
-    "Your daily space for self-discovery.": "Twoja codzienna przestrzeń do odkrywania siebie.",
-    "I help you strengthen your inner power, better understand yourself, and discover ways of living that truly suit you.": "Pomagam Ci wzmocnić Twoją wewnętrzną siłę, lepiej zrozumieć siebie oraz odkrywać sposoby życia, które naprawdę do Ciebie pasują.",
+    "Your daily space for self-discovery.": "Twoja codzienna \nprzestrzeń do \nodkrywania siebie.",
+    "I help you strengthen your inner power, better understand yourself, and discover ways of living that truly suit you.": "Pomagam Ci wzmocnić Twoją \nwewnętrzną siłę, lepiej zrozumieć \nsiebie oraz odkrywać sposoby życia, \nktóre naprawdę do Ciebie pasują.",
 
-    "Step by step, at your pace.": "Krok po kroku, w Twoim tempie.",
-    "Every moment you dedicate to yourself matters. Thanks to this, you get closer and closer to what you truly desire.": "Każdy moment, który poświęcasz sobie, ma znaczenie. Dzięki temu zbliżasz się coraz bardziej do tego, czego naprawdę pragniesz.",
+    "Step by step, at your pace.": "Krok po kroku, \nw Twoim tempie.",
+    "Every moment you dedicate to yourself matters. Thanks to this, you get closer and closer to what you truly desire.": "Każdy moment, który poświęcasz \nsobie, ma znaczenie. Dzięki temu \nzbliżasz się coraz bardziej do tego, \nczego naprawdę pragniesz.",
 
     "Start your journey": "Zacznij swoją podróż",
     "Create an account to monitor your development and match the path to yourself. It will take you less than a minute.": "Załóż konto, by obserwować swój rozwój i dopasować drogę do siebie. Zajmie Ci to mniej niż minutę.",
