--- a/assets/i18n/locales/pl-male.json
+++ b/assets/i18n/locales/pl-male.json
@@ -55,9 +55,7 @@
   },
   "introductionTexts": {
     "Hi, im gowi": "Cześć, jestem Gowi.",
-    "Nice to see you": "Miło Cię widzieć \uD83D\uDE0A",
-    "I can help you understand yourself": "Pomogę Ci na chwilę się zatrzymać i lepiej zrozumieć siebie.",
-    "This will only take a moment": "To zajmie tylko kilka minut.",
+    "Nice to see you! I can help you understand yourself This will only take a moment": "Miło Cię widzieć \uD83D\uDE0A Pomogę Ci na chwilę się zatrzymać i lepiej zrozumieć siebie. To zajmie tylko kilka minut.",
 
     "Your daily space for self-discovery.": "Twoja codzienna przestrzeń do odkrywania siebie.",
     "I help you strengthen your inner power, better understand yourself, and discover ways of living that truly suit you.": "Pomagam Ci wzmocnić Twoją wewnętrzną siłę, lepiej zrozumieć siebie oraz odkrywać sposoby życia, które naprawdę do Ciebie pasują.",
