--- a/assets/i18n/locales/pl-female.json
+++ b/assets/i18n/locales/pl-female.json
@@ -13,7 +13,7 @@
     "Other": "Inne",
     "Don't have an account? Register.": "Nie masz konta? Zarejestruj się.",
     "Forgot your password?": "Zapomniałaś/łeś hasła?",
-    "Log in.": "Zaloguj się.",
+    "Log in": "Zaloguj się.",
     "Password is not correct.": "Hasło nie jest poprawne.",
     "Send reset link.": "Wyślij link resetujący.",
     "Did not receive the message?": "Nie dostałeś wiadomości?",
