--- a/assets/i18n/locales/pl-female.json
+++ b/assets/i18n/locales/pl-female.json
@@ -75,7 +75,7 @@
   },
   "loginTexts": {
     "Welcome back!": "Witaj ponownie!",
-    "Log in to continue your journey with Gowi.": "Zaloguj się, żeby kontynuować swoją podróż z Gowi."
+    "Log in to continue your journey with Gowi.": "Zaloguj się, żeby kontynuować \nswoją podróż z Gowi."
   },
   "createAccTexts": {
     "Create your account": "Stwórz swoje konto",
