feat: use translate

--- a/assets/i18n/locales/pl-female.json
+++ b/assets/i18n/locales/pl-female.json
@@ -106,14 +106,14 @@
     "Questions": "Pytań",
     "Minutes": "Minut",
 
-    "My physical health allows me to do what I want every day.": "Moje zdrowie fizyczne pozwala mi robić to, co chcę na co dzień.",
-    "I feel calm and in mental balance.": "Czuję się spokojna i jestem w równowadze psychicznej.",
-    "I feel that my life has meaning and direction.": "Mam poczucie, że moje życie ma sens i kierunek.",
-    "Overall, I am satisfied with my life.": "Ogólnie jestem zadowolona ze swojego życia.",
-    "I have pleasant and supportive social contacts.": "Mam miłe i wspierające kontakty towarzyskie.",
-    "I am able to cope with daily duties and challenges.": "Potrafię radzić sobie z codziennymi obowiązkami i wyzwaniami.",
-    "I return to balance after difficult situations.": "Wracam do równowagi po trudnych sytuacjach.",
-    "I feel that I have good contact with myself.": "Czuję, że mam ze sobą dobry kontakt.",
+    "My physical health allows me to do what I want every day": "Moje zdrowie fizyczne pozwala mi robić to, co chcę na co dzień.",
+    "I feel calm and in mental balance": "Czuję się spokojna i jestem w równowadze psychicznej.",
+    "I feel that my life has meaning and direction": "Mam poczucie, że moje życie ma sens i kierunek.",
+    "Overall, I am satisfied with my life": "Ogólnie jestem zadowolona ze swojego życia.",
+    "I have pleasant and supportive social contacts": "Mam miłe i wspierające kontakty towarzyskie.",
+    "I am able to cope with daily duties and challenges": "Potrafię radzić sobie z codziennymi obowiązkami i wyzwaniami.",
+    "I return to balance after difficult situations": "Wracam do równowagi po trudnych sytuacjach.",
+    "I feel that I have good contact with myself": "Czuję, że mam ze sobą dobry kontakt.",
 
     "To what extent does this apply to you? (0-5)": "W jakim stopniu dotyczy to Ciebie? (0-5)"
   },
